ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
/* ... */
.calendar {
    display: flex;
    flex-direction: column;
    height: 40%;
    width: 100%;
    margin-top: 10px;
    border-style: solid;
    border-color: #AAA;
}
.datepicker {
    width: 100%;
    position: relative;
}
.uib-daypicker {
    table {
        margin: 0 auto;
    }
    .glyphicon {
        @extend .fa;
        &.glyphicon-chevron-right {
            @extend .fa-chevron-right;
        }
        &.glyphicon-chevron-left {
            @extend .fa-chevron-left;
        }
    }
}
.glyphicon {
    @extend .fa;
    &.glyphicon-arrow-left {
        @extend .fa-arrow-left;
    }
    &.glyphicon-arrow-right {
        @extend .fa-arrow-right;
    }
}
.datepicker .form-control {
    height: 15px;
    padding: 15px;
}

.datepicker .btn {
    padding: 8px 8px;
}
.nav-dynamic-wrapper {
    width:100%;
    padding: 0 10px 0 10px;
    height: 100%;
}
.dynamic-part {
    min-height:100%;
    overflow: hidden;
}
.sub-menu {
    box-shadow: 0px 5px 2px $shadow-color;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    background-color: $sub-menu;
    color: white;
    padding: 5px 10px 5px 10px;
    width: 100%;
    p {
        font-size: 12pt;
    }
    .sliding-middle-out {
        display: inline-block;
        position: relative;
        padding-bottom: 3px;
    }
    .sliding-middle-out:after {
        content: '';
        display: block;
        margin: auto;
        height: 1px;
        width: 0px;
        background: transparent;
    }
    .chosen:hover:after {
        width: 100%;
        height: 1px;
        background: white;
    }
    .chosen:after {
        width: 100%;
        height: 1px;
        background: white;
    }
}
.profile-manager-sub-menu {
    border-style: solid;
    border-color: $border-color;
    border-width: 1px;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    background-color: white;
    color: black;
    padding: 5px 10px 5px 10px;
    width: 100%;
    p {
        font-size: 12pt;
    }
    .sliding-middle-out {
        display: inline-block;
        position: relative;
        padding-bottom: 3px;
    }
    .sliding-middle-out:after {
        content: '';
        display: block;
        margin: auto;
        height: 1px;
        width: 0px;
        background: transparent;
    }
    .chosen:hover:after {
        width: 100%;
        height: 1px;
        background: black;
    }
    .chosen:after {
        width: 100%;
        height: 1px;
        background: black;
    }
}
.profile-manager-route {
    margin-top: 5px;
}
.fa.fa-refresh {
    font-size: 21px;
}
.fa.fa-print {
    font-size: 21px;
}
.fa.fa-cog {
    font-size: 21px;
}
.fa.fa-envelope {
    font-size: 21px;
}
.fa.fa-question-circle {
    font-size: 21px;
}
.fa.fa-bell {
    font-size: 21px;
}
.status-tree-grid {
    padding: 5px;
    margin: 5px;
}
.well-sm {
    padding: 0px;
}
.param-value {
    pre {
        overflow-x: scroll;
        white-space: pre-wrap;
    }
}
.global-search {
    width: 400px;
}
.items-per-page {
    width: 100px !important;
    margin-right: 10px;
}
.fa-refresh-animate {
    animation: spin 0.7s infinite linear;
}
.fa-refresh-animate-once {
    animation: spin 0.7s;
}
@keyframes spin {
    from { transform: rotate(0deg);}
    to { transform: rotate(360deg);}
}

.ui-select-placeholder {
    width: auto !important;
}
.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
    vertical-align: middle;
    padding-top: 4px;
    padding-bottom: 4px;
    line-height: 1;
}
.step-state {
    padding-top: 0 !important;
}
.step-state-success {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-success;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.step-state-failure {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-fail;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.step-state-in-progress {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-in-progress;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.pagination {
    margin: 5px 0;
}
.input-group-addon {
padding: 0 12px;
}
.sender-receiver-wrapper {
    input {
        width: 25%;
    }
}
#passwordForm {
    input {
        width: 50%;
    }
}
.file-browser {
    @include container(10px);
}
.file-explorer {
    margin-top: 10px;
    width: 100%;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}
.file-explorer-nav {
    display: flex;
    flex-direction: row;
    vertical-align: middle;
    width: 100%;
    align-items: center;
}
.file-list-view {
    margin-top: 10px;
    thead, tbody {
        border: 1px solid $border-color;
    }
    .type-name-column {
        display: flex;
        align-items: center;
        .file, .dir {
            margin-right: 5px;
        }
    }
    table {
        table-layout: fixed;
        width: 100%;
        margin-bottom: 5px;
    }
}
.file-view-options {
    display: flex;
    flex-direction: row;
    margin-right: 15px;
}
.files-per-page-pagination-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 5px;
}
.file-pagination {
    a {
        color: black;
        float: left;
        padding: 6px 12px;
        line-height: 1.428571429;
        text-decoration: none;
        border: 1px solid #e8e8e8;
    }
    a.active {
        background-color: rgba(0,0,0,0.03);
    }

    a:hover:not(.active) {background-color: rgba(0,0,0,0.03);}

}
/* ... */

